<resources>
    <string name="app_name">myNotes</string>
    <string name="deleteSelected">SELECT &amp; DEL.</string>
    <string name="Back">BACK</string>
    <string name="COPY">COPY</string>
    <string name="SELECT_ALL">SELECT ALL</string>
    <string name="CUT">CUT</string>
    <string name="paste_it">PASTE</string>
    <string name="title">TITLE…</string>
    <string name="note">Note</string>
    <string name="change_text_size">Change Text Size:</string>
    <string name="Default">DEFAULT</string>
    <string name="share_app">SHARE APP:</string>
    <string name="sampleTitle">TITLE</string>
    <string name="sampleText">Note</string>
    <string name="change_font_color">Choose Font Color:</string>
    <string name="change_background_color">Choose Background Color:</string>
    <string name="blackc">BLACK</string>
    <string name="grayc">GRAY</string>
    <string name="dkgrayc">DKGRAY</string>
    <string name="ltgrayc">LTGRAY</string>
    <string name="redc">RED</string>
    <string name="bluec">BLUE</string>
    <string name="greenc">GREEN</string>
    <string name="yellowc">YELLOW</string>
    <string name="cyanc">CYAN</string>
    <string name="whitec">WHITE</string>
    <string name="droidboyz_dev">droidboyz dev.</string>
    <string name="change_title_style">Choose Title Font Style:</string>
    <string name="change_note_style">Choose Note Font Style:</string>
    <string name="normal">NORMAL</string>
    <string name="bold">BOLD</string>
    <string name="italic">ITALIC</string>
    <string name="bold_italic">BOLD+ITALIC</string>
    <string name="share_apk">Share APK</string>
    <string name="share_link">Share LINK</string>
    <string name="delete">DELETE</string>
    <string name="share_note">Share Note</string>
    <string name="magenta">MAGENTA</string>
</resources>
