<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/context_menu_item_background"
    android:descendantFocusability="blocksDescendants"
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/share"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"
        android:textIsSelectable="false"
        android:onClick="shareApp"
        android:text="@string/share_app"
        android:background="@drawable/context_menu_item_background" />
    <!--View
        android:id="@+id/border1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/share"
        android:background="#000000"
        /-->

    <TextView
        android:id="@+id/textView"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:descendantFocusability="blocksDescendants"
        android:textIsSelectable="false"
        android:layout_below="@+id/share"
        android:text="@string/change_text_size"
        android:textAlignment="center"
        android:gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:padding="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyleSmall"
            android:onClick="increaseTextSize"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/increase"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="defaultTextSize"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="@string/Default"
            android:background="@drawable/context_menu_item_background"
            android:textColor="@android:color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyleSmall"
            android:onClick="decreaseTextSize"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/decrease" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">
        <TextView
            android:text="@string/sampleTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sampleTitle"
            android:layout_weight="1"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@drawable/context_menu_item_background_white" />
        <TextView
            android:text="@string/sampleText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sampleText"
            android:layout_weight="1"
            android:textColor="#000"
            android:textSize="14sp"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@drawable/context_menu_item_background_white"/>

        </LinearLayout>
    <!--View
        android:id="@+id/border3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/linearLayout2"
        android:background="#000000"
        /-->

    <TextView
        android:id="@+id/changeFontColor"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"
        android:background="@drawable/context_menu_item_background"
        android:textIsSelectable="false"
        android:layout_below="@+id/linearLayout2"
        android:text="@string/change_font_color"
        android:onClick="changeFontColor"/>
    <!--View
        android:id="@+id/border4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/changeFontColor"
        android:background="#000000"
        /-->

    <TextView
        android:id="@+id/changeBackgroundColor"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"
        android:background="@drawable/context_menu_item_background"
        android:textIsSelectable="false"
        android:layout_below="@+id/changeFontColor"
        android:text="@string/change_background_color"
        android:onClick="changeBackgroundColor"/>
    <!--View
        android:id="@+id/border5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/changeBackgroundColor"
        android:background="#000000"
        /-->
    <TextView
        android:id="@+id/changeTitleStyle"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"
        android:background="@drawable/context_menu_item_background"
        android:textIsSelectable="false"
        android:layout_below="@+id/changeBackgroundColor"
        android:text="@string/change_title_style"
        android:onClick="changeTitleStyle"/>
    <!--View
        android:id="@+id/border6"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/changeTitleStyle"
        android:background="#000000"
        /-->
    <TextView
        android:id="@+id/changeTextStyle"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"
        android:background="@drawable/context_menu_item_background"
        android:textIsSelectable="false"
        android:layout_below="@+id/changeTitleStyle"
        android:text="@string/change_note_style"
        android:onClick="changeTextStyle"/>
    <!--View
        android:id="@+id/border7"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/changeTextStyle"
        android:background="#000000"
        /-->
    <!--TextView
        android:id="@+id/changeFont"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"
        android:background="@drawable/context_menu_item_background"
        android:textIsSelectable="false"
        android:layout_below="@+id/changeTextStyle"
        android:text="@string/change_font"
        android:onClick="changeFont"/>
    <View
        android:id="@+id/border8"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/changeFont"
        android:background="#000000"
        /-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/droidboyz_dev"
        android:textIsSelectable="true"
        android:textStyle="bold|italic"
        android:textColor="@android:color/holo_blue_dark"
        android:background="@android:color/transparent"/>
</RelativeLayout>